--- a/cart.html
+++ b/cart.html
@@ -32,8 +32,7 @@
         justify-content: space-between;
         align-items: center;
         background: #000000;
-        border-bottom: 4px solid transparent;
-        height: 90px;
+        height: 94px;
     }
 
     header ul {
@@ -486,7 +485,7 @@
         row_2_data_5 = document.createElement("td");
 
         // 수량 버튼
-        row_2_data_4.innerHTML = "<input type='number' min='1' value='1' class='number_input'>"
+        row_2_data_4.innerHTML = "<input type='number' min='1' max='99' value='1' class='number_input'>"
 
         // 삭제하기 버튼
         row_2_data_5.innerHTML = '삭제하기'
@@ -513,7 +512,7 @@
                 row_2_data_3.innerHTML = productListData[0].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart01');
                     location.href = 'cart.html';
                 })
@@ -526,7 +525,7 @@
                 row_2_data_3.innerHTML = productListData[1].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart02');
                     location.href = 'cart.html';
                 })
@@ -539,7 +538,7 @@
                 row_2_data_3.innerHTML = productListData[2].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart03');
                     location.href = 'cart.html';
                 })
@@ -552,7 +551,7 @@
                 row_2_data_3.innerHTML = productListData[3].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart04');
                     location.href = 'cart.html';
                 })
@@ -565,7 +564,7 @@
                 row_2_data_3.innerHTML = productListData[4].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart05');
                     location.href = 'cart.html';
                 })
@@ -578,7 +577,7 @@
                 row_2_data_3.innerHTML = productListData[5].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart06');
                     location.href = 'cart.html';
                 })
@@ -591,7 +590,7 @@
                 row_2_data_3.innerHTML = productListData[6].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart07');
                     location.href = 'cart.html';
                 })
@@ -604,7 +603,7 @@
                 row_2_data_3.innerHTML = productListData[7].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart08');
                     location.href = 'cart.html';
                 })
@@ -617,7 +616,7 @@
                 row_2_data_3.innerHTML = productListData[8].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart09');
                     location.href = 'cart.html';
                 })
@@ -630,7 +629,7 @@
                 row_2_data_3.innerHTML = productListData[9].price;
 
                 row_2_data_5.addEventListener('click', () => {
-                    alert('상품을 삭제하시겠습니까?');
+                    alert('상품을 삭제합니다.');
                     deleteCookie('cart10');
                     location.href = 'cart.html';
                 })
