--- a/board_write.html
+++ b/board_write.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>write</title>
+    <title>문의하기</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -268,7 +268,8 @@
             width: 150px;
             font-size: 15px;
         }
-
+        
+        /*뒤로가기 버튼*/
         #back {
             width: 150px;
             font-size: 15px;
@@ -279,7 +280,6 @@
             font-size: 14px;
             transform: translateX(100%);
         }
-
 
     }
 </style>
@@ -331,6 +331,8 @@
         this.value = 'Day';
         document.getElementById('save').style.backgroundColor = '#fff';
         document.getElementById('save').style.color = '#000';
+        document.getElementById('back').style.backgroundColor = '#fff';
+        document.getElementById('back').style.color = '#000';
         document.getElementById('containerColor').style.borderColor = '#fff';
         document.getElementById('day_night').style.backgroundColor = '#fff';
         document.getElementById('day_night').style.color = '#000';
@@ -348,6 +350,8 @@
         this.value = 'Night';
         document.getElementById('save').style.backgroundColor = '#000';
         document.getElementById('save').style.color = '#fff';
+        document.getElementById('back').style.backgroundColor = '#000';
+        document.getElementById('back').style.color = '#fff';
         document.getElementById('containerColor').style.borderColor = '#000';
         document.getElementById('day_night').style.backgroundColor = '#000';
         document.getElementById('day_night').style.color = '#fff';
