--- a/magazine.html
+++ b/magazine.html
@@ -15,6 +15,9 @@
     <script src="js/cookie.js"></script>
     <script defer src="js/main.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;900&display=swap');
         /*text 모션 폰트*/
@@ -31,7 +34,7 @@
             justify-content: space-between;
             align-items: center;
             background: #000000;
-            height:94px;
+            height: 94px;
         }
 
         header ul {
@@ -120,16 +123,16 @@
             height: 100%;
             object-fit: cover;
         }
-         
+
         .magazine_text {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             grid-row-gap: 465px;
-            margin-top:-1100px;
+            margin-top: -1100px;
         }
 
         .magazine_text p {
-            font-size:1.1em;
+            font-size: 1.1em;
         }
 
         .magazine_text span {
@@ -144,7 +147,7 @@
 
         /*뉴스레터*/
         .news_letter {
-            margin-top:800px;
+            margin-top: 800px;
         }
 
         .news_letter img {
@@ -378,7 +381,7 @@
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 grid-row-gap: 365px;
-                margin-top:-3150px;
+                margin-top: -3150px;
             }
 
             .magazine_text span {
@@ -393,7 +396,7 @@
 
             /*뉴스레터*/
             .news_letter {
-                margin-top:2900px;
+                margin-top: 2900px;
             }
 
             .news_letter img {
