--- a/mypage.html
+++ b/mypage.html
@@ -26,6 +26,9 @@
     <script src="js/main.js"></script>
     <script src="js/cookie.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
 
 </head>
 
@@ -151,7 +154,7 @@
         height: 60px;
         background: #000;
         color: #fff;
-        font-size:1.1em;
+        font-size: 1.1em;
     }
 
     .modifybtn:hover {
@@ -272,7 +275,7 @@
             position: absolute;
             top: 28px;
         }
- 
+
         .navmenu li {
             list-style: none;
             text-align: center;
@@ -329,7 +332,7 @@
         .text-center {
             width: 550px;
         }
-         
+
         /*회원 정보 input*/
         #input-email {
             font-size: 15px;
