--- a/naver_login.html
+++ b/naver_login.html
@@ -21,7 +21,7 @@
 <body>
   <script type="text/javascript">
 
-    var naver_id_login = new naver_id_login("1unGrvjvJKXzMl8aMUwR", "http://127.0.0.1:5500/naver_login.html");
+    var naver_id_login = new naver_id_login("oJMIiFF4kSzVd9eqUAYF", "http://seiproject01.dothome.co.kr/naver_login.html");
     // 접근 토큰 값 출력
 
     // 네이버 사용자 프로필 조회
