--- a/board.html
+++ b/board.html
@@ -16,6 +16,9 @@
     <script src="js/cookie.js"></script>
     <script defer src="js/main.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
 </head>
 
 <style>
