--- a/board_write.html
+++ b/board_write.html
@@ -14,6 +14,9 @@
     <script src="js/main.js"></script>
     <script src="js/cookie.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
 </head>
 
 <style>
@@ -268,7 +271,7 @@
             width: 150px;
             font-size: 15px;
         }
-        
+
         /*뒤로가기 버튼*/
         #back {
             width: 150px;
