--- a/cart.html
+++ b/cart.html
@@ -14,6 +14,9 @@
     <script src="js/sessionStorage.js"></script>
     <script src="js/main.js"></script>
     <script src="js/cookie.js"></script>
+
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
 </head>
 
 <style>
