--- a/detailpage.html
+++ b/detailpage.html
@@ -13,6 +13,9 @@
     <script src="js/sessionStorage.js"></script>
     <script defer src="js/main.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
 
 </head>
 
@@ -261,7 +264,7 @@
             width: 150px;
             font-size: 15px;
         }
-        
+
         /*삭제하기 버튼*/
         #delete {
             width: 150px;
