--- a/id_find.html
+++ b/id_find.html
@@ -27,6 +27,9 @@
     <script src="js/cookie.js"></script>
     <script src="js/sessionStorage.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
     <!--카카오 로그인-->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -156,7 +159,7 @@
         width: 110px;
         height: 39.61px;
         margin-top: 15px;
-        margin-left:478px
+        margin-left: 478px
     }
 
     .pw-find-go p {
@@ -177,7 +180,7 @@
         width: 120px;
         height: 39.61px;
         transform: translateY(-40px);
-        margin-left:400px;
+        margin-left: 400px;
     }
 
     .login-go p {
@@ -186,12 +189,13 @@
     }
 
     .login-go a {
-        color:#000;
+        color: #000;
     }
 
     .login-go a:hover {
         color: #C0C0C0;
     }
+
     /**********미디어 쿼리**********/
     @media screen and (max-width:768px) {
         header {
@@ -341,10 +345,10 @@
         .mb-4 p {
             font-size: 2.5em;
         }
-        
+
         /*회원정보 input*/
         #input-username-find {
-            font-size:15px;
+            font-size: 15px;
         }
 
         input#input-username-find+label {
@@ -352,34 +356,34 @@
         }
 
         #input-phoneNumber-find {
-            font-size:15px;
+            font-size: 15px;
         }
 
         input#input-phoneNumber-find+label {
-            font-size:15px;
+            font-size: 15px;
         }
 
         /*확인 버튼*/
         .idfindbtn {
-            font-size:15px;
+            font-size: 15px;
         }
 
         /*비밀번호 찾기로 이동*/
         .pw-find-go {
-            margin-left:425px;
+            margin-left: 425px;
         }
 
         .pw-find-go p {
-            font-size:15px;
+            font-size: 15px;
         }
 
         /*로그인*/
         .login-go {
-            margin-left:350px;
+            margin-left: 350px;
         }
 
         .login-go p {
-            font-size:15px;
+            font-size: 15px;
         }
 
 
@@ -463,7 +467,7 @@
                     <div class="login-go">
                         <p><a href="signin.html">로그인</a></p>
                     </div>
-                    
+
 
 
 
