--- a/pw_find.html
+++ b/pw_find.html
@@ -27,6 +27,9 @@
     <script src="js/cookie.js"></script>
     <script src="js/sessionStorage.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
     <!--카카오 로그인-->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -162,9 +165,9 @@
         text-decoration: underline;
         line-height: 39.61px;
     }
-    
+
     .login-go a {
-        color:#000;
+        color: #000;
     }
 
     /**********미디어 쿼리**********/
@@ -341,7 +344,7 @@
 
         /*로그인하러 가기*/
         .login-go p {
-            font-size:15px;
+            font-size: 15px;
         }
     }
 </style>
