--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,9 @@
     <script src="js/sessionStorage.js"></script>
     <script src="js/main.js"></script>
     <script src="js/cookie.js"></script>
+
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
 </head>
 
 <style>
@@ -310,7 +313,7 @@
 
         /*상품 사진*/
         .shop_img {
-            grid-auto-rows:350px;
+            grid-auto-rows: 350px;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 40px;
             grid-row-gap: 100px;
@@ -321,8 +324,8 @@
             grid-template-columns: repeat(2, 1fr);
             margin-top: -1800px;
             grid-row-gap: 390px;
-            grid-column-gap:50px;
-            font-size:0.8em;
+            grid-column-gap: 50px;
+            font-size: 0.8em;
             /*margin-top: -555px;*/
         }
 
@@ -583,9 +586,9 @@
             } else {
                 cart_duplication();
             }
-        } 
+        }
 
-     
+
     </script>
 
 </body>
