--- a/signup.html
+++ b/signup.html
@@ -26,6 +26,9 @@
     <script src="js/cookie.js"></script>
     <script src="js/sessionStorage.js"></script>
 
+    <!--파비콘-->
+    <link rel="shortcut icon" href="image/favicon.png">
+
 
 </head>
 
